# wallski

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/: wallpaper.frag  wallpaper.vert
include/: colors_w.h  graphics_w.h  wayland_w.h
src/: main.c  wallski-daemon.c
